For Checking: fix for scrollbar issue

--- a/css/smallscreen.scss
+++ b/css/smallscreen.scss
@@ -283,7 +283,7 @@ body {
             .container-experience__entries__entry{
                 background-color: $accent-color;
                 width: 70%;
-                // height: 200px;
+                height: 20%;
                 padding: 1% 3%;
                 margin-top: 2vw;
                 // padding: 3%;
@@ -297,19 +297,20 @@ body {
                 }
                 .entry__content__container::-webkit-scrollbar {
                     width: 0.2em;
-                  }
-                   
-                  .entry__content__container::-webkit-scrollbar-track {
-                    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-                  }
-                   
-                  .entry__content__container::-webkit-scrollbar-thumb {
-                    background-color: $gray;
-                  }
+                }
+                
+                .entry__content__container::-webkit-scrollbar-track {
+                box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+                }
+                
+                .entry__content__container::-webkit-scrollbar-thumb {
+                background-color: $gray;
+                }
                 .entry__content__container{
                         overflow: auto;
                         margin-top: 0.5vw;
                         margin-bottom: 0.5vw;
+                        height: 15vw;
 
                         .entry__content__details{
                             text-align: start;
@@ -576,9 +577,20 @@ body {
                 }
                 .container-experience__entries__entry{
                     margin-bottom: 2vw;
-
+                    //trial
+                    .entry__content__container::-webkit-scrollbar {
+                       width: unset;
+                    }
+                    
+                    .entry__content__container::-webkit-scrollbar-track {
+                        box-shadow: unset;
+                    }
+                    
+                    .entry__content__container::-webkit-scrollbar-thumb {
+                        background-color: unset;
+                    }
                     .entry__content__container{
-                        height: 90vw;
+                        height: 25vw;
                         overflow: auto;
                         margin-top: 2vw;
                         margin-bottom: 4vw;
@@ -586,8 +598,8 @@ body {
                         .entry__content__details{
                             padding-top: 1%;
                             text-align: start;
-                            height: 100vw;
-                            overflow: auto;
+                            // height: 100vw;
+                            // overflow: auto;
                             margin-top: 2vw;
                         }
                     }
